# demo-F5-TTS

./: .gitignore  Dockerfile  Dockerfile.new  Dockerfile.server  pyproject.toml
.github/workflows/: publish-docker-image.yaml
argocd/: f5-tts-application.yaml
kubernetes/: deployments.yaml  ingresses.yaml  kustomization.yaml  namespace.yaml  persistentvolumeclaims.yaml  secrets.example.yaml  services.yaml
kugelaudio/: preprocessor_config.json  pyproject.toml
kugelaudio/src/kugelaudio_open/: __init__.py
kugelaudio/src/kugelaudio_open/configs/: model_config.py
kugelaudio/src/kugelaudio_open/models/: conv_layers.py  diffusion_head.py  kugelaudio_inference.py  kugelaudio_model.py  tokenizer.py
kugelaudio/src/kugelaudio_open/processors/: audio_processor.py  kugelaudio_processor.py  text_tokenizer.py
kugelaudio/src/kugelaudio_open/utils/: __init__.py  generation.py  integration.py
src/f5_tts/demo/: constants.py  server.py
