[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kugelaudio-open"
version = "0.1.0"
description = "Open-source speech synthesis with AR + diffusion architecture"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "torch>=2.0.0",
    "transformers==4.57.6",
    "accelerate>=1.0.0",
    "diffusers>=0.25.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "tqdm>=4.65.0",
    "audioseal>=0.1.0",
    "bitsandbytes>=0.43.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kugelaudio_open = ["configs/*.json"]